--- a/packages/cli/pyproject.toml
+++ b/packages/cli/pyproject.toml
@@ -5,7 +5,7 @@ description = "ComfyDock CLI"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "comfydock_core",
+    "comfydock_core>=1.0.0",
     "argcomplete>=3.5.0",
 ]
 
