Updated with publish docs workflow

--- a/docs/comfydock-docs/mkdocs.yml
+++ b/docs/comfydock-docs/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: ComfyDock Documentation
 site_description: Package and environment manager for ComfyUI
-site_url: https://comfydock.org
+site_url: https://comfydock.com
 repo_url: https://github.com/ComfyDock/comfydock
 repo_name: ComfyDock/comfydock
 edit_uri: edit/main/docs/comfydock-docs/docs/
