docs(user-guide): add comprehensive Workflows section (workflow-resolution, workflow-tracking)
Completes the Workflows section of the user guide with two major documentation pages
covering workflow dependency resolution and lifecycle management.

Added Files:
- docs/comfydock-docs/docs/user-guide/workflows/workflow-resolution.md (16 KB, ~700 lines)
- docs/comfydock-docs/docs/user-guide/workflows/workflow-tracking.md (17 KB, ~750 lines)

Modified Files:
- docs/comfydock-docs/mkdocs.yml - Reordered Workflows section for logical flow

## workflow-resolution.md

Comprehensive guide to automatic workflow dependency resolution covering:

**Core Concepts:**
- Two-phase resolution: Analysis (parse workflow JSON) → Resolution (match dependencies)
- Automatic resolution during `cfd commit` with safety blocking
- Interactive vs --auto modes with detailed UX flows

**Node Resolution:**
- Builtin node detection (no package needed)
- Custom node resolution strategies: exact match, registry lookup, fuzzy search
- Resolution states: resolved, ambiguous, unresolved, optional
- Interactive prompts with search refinement, manual package IDs, optional marking

**Model Resolution:**
- Exact hash matching (BLAKE3) against model index
- Filename search (case-insensitive)
- Previous resolution detection (download intents)
- Fuzzy search with confidence scoring
- Resolution states: resolved, download intent, ambiguous, unresolved, optional

**Advanced Features:**
- Model path synchronization (builtin nodes only, strips base directories)
- Subgraph support (ComfyUI v1.24.3+): flattening, scoped IDs, lossless round-trip
- Resolution caching with context-aware invalidation
- Progressive writes (Ctrl+C safe, immediate saves to pyproject.toml)
- Download intents (pending model downloads with URLs)

**Control Flags:**
- `--install` - Auto-install resolved node packages
- `--no-install` - Skip installation (resolution only)
- `--auto` - Skip prompts, auto-select best matches

**Sections:**
- Insta

--- a/docs/comfydock-docs/mkdocs.yml
+++ b/docs/comfydock-docs/mkdocs.yml
@@ -28,8 +28,9 @@ nav:
       - Managing Models: user-guide/models/managing-models.md
       - Adding Sources: user-guide/models/adding-sources.md
     - Workflows:
-      - Workflow Resolution: user-guide/workflows/workflow-resolution.md
       - Workflow Tracking: user-guide/workflows/workflow-tracking.md
+      - Workflow Resolution: user-guide/workflows/workflow-resolution.md
+      - Model Importance: user-guide/workflows/workflow-model-importance.md
     - Python Dependencies:
       - Py Commands: user-guide/python-dependencies/py-commands.md
       - Constraints: user-guide/python-dependencies/constraints.md
