--- a/docs/comfydock-docs/pyproject.toml
+++ b/docs/comfydock-docs/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "mkdocs-material>=9.6.6",
     "mkdocs-redirects>=1.2.2",
     "mkdocs-git-revision-date-localized-plugin>=1.3.0",
+    "mkdocs-argparse>=0.0.1",
 ]
